# fastapi_starter

./: .gitignore  LICENSE  main.py  person_schema.py  person_schema_mongo.py  pyproject.toml
app/: main.py
app/core/: lifespan.py
app/db/: database_in_memory.py
app/routers/: person_in_memory_router.py  person_inmemory.py  person_mongo_router.py
app/services/: person_service.py  person_service_in_memory.py
db/: database.py  db.py
routers/: person_inmemory.py  person_mongo_router.py
services/: person_service.py
tests/: test_person_in_memory_router.py  test_person_mongo_router.py  test_person_service.py  test_person_service_in_memory.py
